packages/cli/src/executor/snapshots/envio__executor__init__tests__agentic_mode_detection_matrix.snap
---
source: packages/cli/src/executor/init.rs
expression: report
---
plain interactive tty: false
piped stdout: true
claudecode set: true
cursor set: true
aider set: true
envio_tui=false overrides tty: true
envio_tui=true overrides agent: false
envio_tui=1 forces interactive: false
envio_tui=0 forces agentic: true
