packages/cli/src/executor/snapshots/envio__executor__init__tests__next_steps_in_current_dir_alias.snap
---
source: packages/cli/src/executor/init.rs
expression: "next_steps_message(Path::new(\"./\"), PackageManager::Npm)"
---

Your indexer is ready! Pick how you'd like to run it:

  1. npm run test    # run the tests (recommended for AI)
  2. npm run dev     # run locally
  3. npm run start   # run in production
