packages/cli/src/executor/snapshots/envio__executor__init__tests__next_steps_in_subdir_with_single_quote.snap
---
source: packages/cli/src/executor/init.rs
expression: "next_steps_message(Path::new(\"alice's indexer\"), PackageManager::Npm)"
---

Your indexer is ready! Pick how you'd like to run it:

  1. cd 'alice'\''s indexer' && npm test    # run the tests (recommended for AI)
  2. cd 'alice'\''s indexer' && npm dev     # run locally
  3. cd 'alice'\''s indexer' && npm start   # run in production
