packages/cli/src/executor/snapshots/envio__executor__init__tests__next_steps_in_subdir_with_spaces.snap
---
source: packages/cli/src/executor/init.rs
expression: "next_steps_message(Path::new(\"my indexer\"), PackageManager::Npm)"
---

Your indexer is ready! Pick how you'd like to run it:

  1. cd 'my indexer' && npm run test    # run the tests (recommended for AI)
  2. cd 'my indexer' && npm run dev     # run locally
  3. cd 'my indexer' && npm run start   # run in production
